resolved sonar issues